ajuste 'card',pagina produto e pagina carrinho

--- a/src/componentes/Produtos/index.css
+++ b/src/componentes/Produtos/index.css
@@ -2,7 +2,7 @@
     padding: 40px 100px 15px 100px;
     display: flex;
     flex-direction: column;
-    background-color: #F5F5F5;
+    background-color: #e6e6e6;
 }
 
 .ulCard {
