--- a/src/componentes/Card/index.css
+++ b/src/componentes/Card/index.css
@@ -1,9 +1,13 @@
 
 #liCard {
+   
     height: 439px;
     width: 292px;
     position: relative;
     display: flex;
+    margin-left: -40px;
+    flex-wrap: wrap;
+    gap: 5px;
     flex-direction: row;
 }
 
@@ -25,10 +29,19 @@
     display: flex;
     flex-direction: column;
     align-items: start;
-    gap: 5px;
-    padding-left: 3px;
+    margin-left: 25px;
+    
+    
     position: absolute;
     top: 295px;
+}
+
+#cardPrice {
+    text-decoration: line-through;
+}
+
+.cardPrice {
+    text-decoration: none;
 }
 
 
