--- a/src/componentes/pageProdutos/styles.css
+++ b/src/componentes/pageProdutos/styles.css
@@ -1,16 +1,159 @@
 @charset "UTF-8";
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: 0;
+  outline: 0;
+}
 
-.produto {
+#App {
   display: flex;
   flex-direction: column;
+  
+}
+.grid {
+  display: flex;
+  flex-direction: column;
+  margin-right: 100px;
+  width: 1200px;
+ margin-left: 80px;
+ background-color: #e6e6e6;
+
+}
+.produtos {
+  margin-left: 220px;
+
 }
 
-.produto h1 {
+.container8 {
   display: flex;
-  margin: 0 auto;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-top: 50px;
+  margin-right: 40px;
+  margin-bottom: 50px;
+  color: #000000;
+  width: 400px;
+  background-color: #e6e6e6;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.flex8 h1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-left: 20px;
+  font-family: "inter", sans-serif;
+  font-size: 18px;
+}
+
+.container8 span {
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.filter-btn {
+  display: flex;
+  position: absolute;
+  flex-direction: row;
+  width: 300px;
   justify-content: center;
   align-items: center;
-  border: 2px solid #000;
-  width: 1200px;
-  height: 200px;
+  margin-left: 950px;
+  border: 2px solid transparent;
 }
+
+.Appproduto {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  background-color: #f2f2fe;
+  width: 902px;
+}
+
+#container9 {
+  padding: 2px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 15px;
+  background-color: #f2f2fe;
+  margin-left: 200px;
+  width: 902px;
+}
+
+.grid-product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 90px;
+  width: 232px;
+  height: 419px;
+  border: 2px solid transparent;
+  border-radius: 2%;
+  margin: 10px 5px;
+}
+
+.back-image {
+  background-color: white;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid transparent;
+}
+
+#grid-tenis {
+  border: 2px solid transparent;
+  margin-left: -40px;
+  width: 262px;
+  height: 419;
+}
+
+#grid-tenis1 {
+  border: 2px solid transparent;
+  margin-left: -40px;
+  width: 232px;
+  height: 380;
+  transform: rotate(-28deg); /* Gira a imagem 45 graus */
+  transition: transform 0.5s; /* Adiciona uma transição suave */
+}
+
+.grid-product p {
+  margin-left: 0px;
+  margin-top: 5px;
+  font-family: "inter", sans-serif;
+  font-size: 20px;
+  font-weight: none;
+  border: 2px solid transparent;
+}
+
+.preco {
+  text-decoration: line-through;
+  border: 2px solid transparent;
+  color: #858585;
+}
+
+.mini-text {
+  margin-left: 0px;
+  font-family: "inter", sans-serif;
+  font-size: 12px;
+  border: 2px solid transparent;
+}
+
+#grid-oferta {
+  display: flex;
+  width: 96px;
+  height: 32px;
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 5px, 15px, 5px, 15px;
+  border: 2px solid transparent;
+}/*# sourceMappingURL=styles.css.map */
+
